feat(Aula7): adicionar crud de cidades incompleto (falta aopção de editar).

--- a/src/modulo-08-java/aula7/modulo-08-java/aula6/crescer-web/src/main/resources/messages_pt_BR.properties
+++ b/src/modulo-08-java/aula7/modulo-08-java/aula6/crescer-web/src/main/resources/messages_pt_BR.properties
@@ -8,6 +8,7 @@ page.template.logout=Sair
 # header.xhtml
 page.header.itens=Cadastros
 page.header.person=Pessoa
+page.header.city=Cidade
 
 # searchTemplate.xhtml
 page.search.filters=Filtros
@@ -22,3 +23,9 @@ page.search.delete=Excluir
 page.pessoa.search=Consultar Pessoa 
 page.pessoa.id=ID
 page.pessoa.name=Nome
+
+# cidade.xhtml
+page.cidade.search=Consultar Cidade
+page.cidade.id=ID
+page.cidade.name=Nome
+page.cidade.uf=UF
