--- a/src/modulo-08-java/aula8/spring-crescer-web/src/main/resources/messages.properties
+++ b/src/modulo-08-java/aula8/spring-crescer-web/src/main/resources/messages.properties
@@ -2,3 +2,19 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
+#title
+title.cidade=Cidade
+
+# form
+form.submit=Enviar
+form.reset=Limpar
+form.delete=Excluir
+form.edit=Editar
+
+#Cidade
+cidade.form=Manuten\u00e7\u00e3o de Cidadesh
+
+cidade.id=ID
+cidade.name=Nome
+cidade.uf=UF
+cidade.register=Cadastro
